# MWPC-Simulation

./: CMakeLists.txt  README.md  ar_50_co2_50_V3.gas  ar_50_co2_50_V4.gas  ar_50_co2_50_V5.gas  check_threads  check_threads.C  config1AnalyticPotential.C  config1OldFoil5LayerMWPC.C  config2DWCWire6LayerMWPC.C  config3NewWire5LayerMWPC.C  config4Foil6LayerMWPC.C  generate.C  newMWPC.C  newMWPCManyParticles.C  oldMWPC.C  oldMWPC2.C  oldMWPCManyParticles.C
